--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
       </div>
     </section>
     <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover">
-      <h2 class="cover__title">До Байкала «на собаках»</h2>
-      <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h3>
+      <h2 class="cover__title">До Байкала «на собаках»
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+      </h2>
       <img src="./images/cover-trains.jpg" alt="До Байкала на собаках" class="cover__overlay">
     </a>
   </main>
