--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li>Аэропортов 241</li>
       </ul>
     </section>
-    <section class="photo-grid">
+    <section aria-label="Фотографии России" class="photo-grid">
       <img src="./images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item">
       <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Облака" class="photo-grid__item">
       <img src="./images/photo-grid-tuman.jpg" alt="Туман" class="photo-grid__item">
@@ -137,7 +137,7 @@
     </section>
     <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover">
       <h2 class="cover__title">До Байкала «на собаках»
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        <span class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</span>
       </h2>
       <img src="./images/cover-trains.jpg" alt="До Байкала на собаках" class="cover__overlay">
     </a>
