--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Путешествия по России</title>
 </head>
-<body>
-<div class="page">
+<body class="page">
   <header class="header">
     <img src="./images/logo/header-logo.svg" alt="Лого" class="header__logo">
-    <a href="#" class="header__lang-link">Ru</a>
+    <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
     <a href="#" class="header__lang-link">En</a>
   </header>
   <main class="content">
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
-      <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
+      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img src="./images/lead-polka.jpg" alt="Полка" class="lead__image">
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
@@ -29,6 +28,8 @@
         мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
         стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
+        <!-- В макете весь данный блок представлен единым текстовым блоком с единым шрифтом, в параметрах
+        шрифта Weight=400, в CSS Weight=700 было выбрано 400, изменил на 700 -->
         <li>Часовых поясов 11</li>
         <li>Объектов природного наследия ЮНЕСКО 12</li>
         <li>Объектов культурного наследия ЮНЕСКО 16</li>
@@ -55,10 +56,10 @@
         <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a href="" class="place__link">park-kosa.ru</a>
+          <a href="http://park-kosa.ru/" class="place__link">park-kosa.ru</a>
         </div>
         <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
-        <div>
+        <div class="place__paragraphs">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
             спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
             природная зона на краю российского анклава.</p>
@@ -72,10 +73,11 @@
         <h2 class="place__title">Кольский</h2>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
+          <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National
+            Geographic</a>
         </div>
         <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
-        <div>
+        <div class="place__paragraphs">
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
             юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
           <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
@@ -92,7 +94,7 @@
           <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link">YouTube</a>
         </div>
         <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
-        <div>
+        <div class="place__paragraphs">
           <p class="place__paragraph">Алтай — одно из красивейших мест в России.
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
             озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
@@ -109,7 +111,7 @@
           <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
         </div>
         <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
-        <div>
+        <div class="place__paragraphs">
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый
             большой источник пресной воды и одно из красивейших мест в России.</p>
           <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу.
@@ -125,7 +127,7 @@
           <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
         </div>
         <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
-        <div>
+        <div class="place__paragraphs">
           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
             лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
             национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
@@ -135,21 +137,25 @@
         </div>
       </div>
     </section>
-    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover">
-      <h2 class="cover__title">До Байкала «на собаках»
-        <span class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</span>
-      </h2>
-      <img src="./images/cover-trains.jpg" alt="До Байкала на собаках" class="cover__overlay">
-    </a>
+    <section class="cover">
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay">
+        <div class="cover__titles">
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+            электричках.</p>
+        </div>
+      </a>
+    </section>
   </main>
   <footer class="footer">
-    <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-    <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-    <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-    <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
-    <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+    <nav class="footer__navigation">
+      <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+      <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+      <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+      <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+      <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+    </nav>
     <p class="footer__copyright">© 2023. Александр</p>
   </footer>
-</div>
 </body>
 </html>
