--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
         мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
         стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
-        <!-- В макете весь данный блок представлен единым текстовым блоком с единым шрифтом, в параметрах
-        шрифта Weight=400, в CSS Weight=700 было выбрано 400, изменил на 700 -->
-        <li>Часовых поясов 11</li>
-        <li>Объектов природного наследия ЮНЕСКО 12</li>
-        <li>Объектов культурного наследия ЮНЕСКО 16</li>
-        <li>Природных заповедников 105</li>
-        <li>Аэропортов 241</li>
+        <li>Часовых поясов <span class="intro__digit">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО <span class="intro__digit">12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО <span class="intro__digit">16</span></li>
+        <li>Природных заповедников <span class="intro__digit">105</span></li>
+        <li>Аэропортов <span class="intro__digit">241</span></li>
       </ul>
     </section>
     <section aria-label="Фотографии России" class="photo-grid">
